GNOME Bugzilla – Bug 660407
at-spi2-registryd crashed with signal 5 in g_type_create_instance()
Last modified: 2012-09-10 17:28:47 UTC
Created attachment 197718 [details] Threaded stack trace At-spi2-core 2.2.0, threaded stack trace attached.
[Resetting QA Contact to newly introduced "at-spi-maint@gnome.bugs". Reason: So far it was impossible to watch changes in at-spi bug reports without following all the specific persons (Li Yuan, Bill Haneman, Jeff Wai, ...) and also their activity outside of at-spi reports. IMPORTANT: Anyone interested in following all bug activity (including all maintainers) must watch the "at-spi-maint@gnome.bugs" dummy user by adding it to the 'Users to watch' list under Preferences->Email preferences. This is also the default procedure nowadays in GNOME when setting up new products.]
For some reason, at-spi2-registryd was unable to open the X display. It was calling g_error, which was inconsistent with the way GNOME apps generally behaved in that situation, so I've modified the code to output a warning and exit(1) rather than exit with a SIGABRT. This does not address the reason that the registry daemon was unable to open the X display in the first place, so feel free to reopen if you think it appropriate, but it is hard for me to say what is going on without context.