Exit without a SIGABRT when unable to open X display

At-spi2-registryd was calling g_error when unable to open the default
display, which led to a SIGABRT and a core dump. This behavior is
inconsistent with what is generally done by GNOME apps, so let's call
g_warning() and exit(1) instead.

https://bugzilla.gnome.org/show_bug.cgi?id=660407